--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,11 @@
+nbproject
+._*
+.vagrant
+.~lock.*
+.buildpath
+.DS_Store
 .idea
+.project
+.settings
+vendor
 composer.phar
-composer.lock
-phpunit.xml
-vendor/
